ClassNode editable implementation